--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,21 @@
-<%= render "query_params" if @params %>
+<% render "query_params" if @params %>
 
 <h1>Articles</h1>
 
+Our blog has <%= Article.public_count %> articles and counting!
+
 <ul>
   <% @articles.each do |article| %>
-    <li>
-      <!-- <a href="/articles/<%= article.id %>"> -->
-        <!--  <a href="<%= article_path(article) %>"> -->
-      <!-- <%= article.title %> -->
+    <% unless article.archived? %>
+      <% puts article.status%>
+      <li>
+        <!-- <a href="/articles/<%= article.id %>"> -->
+          <!--  <a href="<%= article_path(article) %>"> -->
+        <!-- <%= article.title %> -->
 
-      <%= link_to article.title, article %>
-    </li>
+        <%= link_to article.title, article %>
+      </li>
+    <% end %>
   <% end %>
 </ul>
 
